# readme-to-doc

./: .gitignore  Cargo.toml  LICENSE  README.md  jest.config.js  package.json  polywrap.build.yaml  polywrap.deploy.yaml  polywrap.yaml  tsconfig.json
src/: cli.ts  lib.rs  schema.graphql
src/commands/: index.ts  run.ts
src/lib/: defaults.ts
tests/: e2e.spec.ts
